--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="twitter:description" content="Small website that gives you access to over 100 stations to help you listen to the Quran from your favorite reciters easily."></meta>
         <meta name="twitter:image" content="https://ali5723.github.io/QuranAudio/thumbnail.jpeg"></meta>
         <!-- Optional Meta Tags -->
-        <meta name="keywords" content="Quran Radio, Quran Audio, Islamic Radio, Quran Stations, Online Quran, Quran Streaming, Islamic Audio, Quranic Recitations, Quran Player, Islamic Content, Quranic Stations, Quranic Audio Streaming, Islamic Music, Quranic Broadcast, Quranic Radio App"></meta>
+        <meta name="keywords" content="Quran Radio, Quran Audio, Islamic Radio, Quran Stations, Online Quran, Quran Streaming, Islamic Audio, Quranic Recitations, Quran Player"></meta>
         <meta name="robots" content="index, follow"></meta>
         <meta name="content-type" content="text/html; charset=utf-8"></meta>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
